Commit con arreglos del ejercicio 2, del tp2